--- a/1908.07936/1908.07936.tex
+++ b/1908.07936/1908.07936.tex
@@ -72,18 +72,18 @@ Many scientists simply object to the idea that scientific ideas could have meani
 
 We also believe that questions of the meaning of scientific claims already are (and should be) open to the input of non-scientists.  Enabling interdisciplinary exploration into the philosophical, metaphorical, and generative potential of quantum physics concepts is one of our aims with this essay. 
 
-In the art and design world, we see a particular demand for greater understanding of quantum physics spurred by the influence of a single interdisciplinary feminist scholar, Karen Barad\cite{Barad}\footnote{Barad is faculty at the University of California, Santa Cruz.  Her book \cite{Barad} is widely read in the humanities, in science studies, and in the arts, although it is interesting to note that she is almost entirely unknown among physicists.}.  Barad (who herself was trained as a physicist) has opened up entirely new communities of interest in quantum phenomena.  You do not need to be familiar with Barad's work to understand the rest of this essay, but we will refer to her as a central example of someone who takes the ideas of quantum physics to be deeply meaningful outside of the laboratory setting.  Barad believes that the facts of quantum physics are so philosophically important that they wholly change how we should think about people, relationships, subjectivity, objectivity, nature, culture, and scholarship itself. Citing Barad, scholars in the arts, humanities, and many interdisciplinary fields now write about the ``observer effect'' and ``entanglement'' -- technical physics concepts -- in work that has a distinctly social or political (that is, not primarily physics-based) emphasis.  
+In the art and design world, we see a particular demand for greater understanding of quantum physics spurred by the influence of a single interdisciplinary feminist scholar, Karen Barad \cite{Barad}\footnote{Barad is faculty at the University of California, Santa Cruz.  Her book \cite{Barad} is widely read in the humanities, in science studies, and in the arts, although it is interesting to note that she is almost entirely unknown among physicists.}.  Barad (who herself was trained as a physicist) has opened up entirely new communities of interest in quantum phenomena.  You do not need to be familiar with Barad's work to understand the rest of this essay, but we will refer to her as a central example of someone who takes the ideas of quantum physics to be deeply meaningful outside of the laboratory setting.  Barad believes that the facts of quantum physics are so philosophically important that they wholly change how we should think about people, relationships, subjectivity, objectivity, nature, culture, and scholarship itself. Citing Barad, scholars in the arts, humanities, and many interdisciplinary fields now write about the ``observer effect'' and ``entanglement'' -- technical physics concepts -- in work that has a distinctly social or political (that is, not primarily physics-based) emphasis.  
 
-In the social sciences, quantum concepts have also gotten a recent boost due to the work of International Relations scholar Alexander Wendt\cite{Wendt}. Wendt thinks the social sciences have been led astray by implicit assumptions of a mechanistic and deterministic (``classical'') universe.  In contrast to Barad, however, he also engages in some provocative speculation beyond currently established science. To Wendt, the unresolved problem of the nature and origin of consciousness is a critical barrier towards progress in any field attempting to study humans (thinking beings with subjective, conscious experiences) scientifically.  Wendt believes quantum physics will ultimately be important for explaining consciousness.  Thus, Wendt seeks more from quantum physics than the inspiration for new ideas.  He believes it may be critical to the social sciences because it may be the underlying science of how humans think and behave.  
+In the social sciences, quantum concepts have also gotten a recent boost due to the work of International Relations scholar Alexander Wendt \cite{Wendt}. Wendt thinks the social sciences have been led astray by implicit assumptions of a mechanistic and deterministic (``classical'') universe.  In contrast to Barad, however, he also engages in some provocative speculation beyond currently established science. To Wendt, the unresolved problem of the nature and origin of consciousness is a critical barrier towards progress in any field attempting to study humans (thinking beings with subjective, conscious experiences) scientifically.  Wendt believes quantum physics will ultimately be important for explaining consciousness.  Thus, Wendt seeks more from quantum physics than the inspiration for new ideas.  He believes it may be critical to the social sciences because it may be the underlying science of how humans think and behave.  
 
 That could be true.  Or, it could be false.  Or it could be a piece of a more complex truth.  At the moment, we simply do not know, since the scientific understanding of the mind, brain, and conscious experience is still far from complete.  One reason for noting Wendt's work here is to emphasize the importance of empirical tests to evaluate any claims that take steps beyond what we have already established scientifically, including claims that quantum physics has something to do with consciousness. Wendt acknowledges that his argument includes a gamble, and that future science may falsify some of his claims.  
 
-Unfortunately, the cultural processing of quantum physics more broadly also involves quantum pseudoscience proponents, who promote (and profit from) unsubstantiated and unscientific claims that quantum physics has something to do with human thought, spirituality, or health\cite{Pessoa}.  These forms of pseudoscience, which we encounter surprisingly often in conversations with students and colleagues, are problematic because they are at odds with the established knowledge and methods of science. 
+Unfortunately, the cultural processing of quantum physics more broadly also involves quantum pseudoscience proponents, who promote (and profit from) unsubstantiated and unscientific claims that quantum physics has something to do with human thought, spirituality, or health \cite{Pessoa}.  These forms of pseudoscience, which we encounter surprisingly often in conversations with students and colleagues, are problematic because they are at odds with the established knowledge and methods of science. 
 
 To be clear, speculating beyond the limits of current science is perfectly fair game for anyone, and such speculations need not be responsible to the knowledge and methods of science in every context (for example, in science fiction).  Yet we think it is important to be able to tell the difference, and to respect the things that set scientific knowledge apart from other forms of thought or belief. Any claims of the sort ``A physically causes B'' are explicitly the kind of claims that should be substantiated by rigorous scientific research, which includes experimental verification.  
 Such substantiation, generally speaking, is absent for pseudoscientific claims.  
 
-The specific quantum healing claim that the act of conscious thought can directly cause changes in the external world is problematic at the outset, because science has no complete model to describe what conscious though {\em is}, much less to model ways it might exert a causal influence. If the proposed mechanism for such influence is claimed to be "direct," on the basis of some quantum physics effect (not through complex and multifaceted psychological and social mechanisms), that claim is not based on any empirically substantiated science; no such mechanism is proposed or described within the field of quantum physics as it currently stands.  Even if we take the claim as speculative, any possible mechanisms for physical causation need to be evaluated for consistency with everything else we know about how the world works. Precisely because we have such a sophisticated understanding of the forces involved in physical interactions (enabling a host of technologies from brain scanning to remote sensing), this is a high bar to clear. Any causal mechanism that is supposedly based on physics needs to be explainable {\em along with} and {\em in relation to} all the other physical causal mechanisms we already understand.  In other words, any proposed physical mechanism for quantum healing needs to be explained in the same framework that explains MRI scans, thermal imaging, and all the other mechanisms we already know for physical communication with and about the body.   
+The specific quantum healing claim that the act of conscious thought can directly cause changes in the external world is problematic at the outset, because science has no complete model to describe what conscious thought {\em is}, much less to model ways it might exert a causal influence. If the proposed mechanism for such influence is claimed to be "direct," on the basis of some quantum physics effect (not through complex and multifaceted psychological and social mechanisms), that claim is not based on any empirically substantiated science; no such mechanism is proposed or described within the field of quantum physics as it currently stands.  Even if we take the claim as speculative, any possible mechanisms for physical causation need to be evaluated for consistency with everything else we know about how the world works. Precisely because we have such a sophisticated understanding of the forces involved in physical interactions (enabling a host of technologies from brain scanning to remote sensing), this is a high bar to clear. Any causal mechanism that is supposedly based on physics needs to be explainable {\em along with} and {\em in relation to} all the other physical causal mechanisms we already understand.  In other words, any proposed physical mechanism for quantum healing needs to be explained in the same framework that explains MRI scans, thermal imaging, and all the other mechanisms we already know for physical communication with and about the body.   
 
 This is all a long way of saying:  if it sounds too good to be true, it probably is. Quantum physics is not a trick or a way of evading the ordinary rules of nature.  Quantum physics has some amazing implications, but it is very much grounded in the physical and the possible, describing processes that are going on in atoms, in computer chips, in lasers, and in nuclear bombs.  Powerful stuff, but all well-understood, empirically founded, technologically activated physics. 
 
@@ -135,7 +135,7 @@ The interpretation is a set of philosophical commitments associating the terms i
 Thus, and this is the punchline of this section (and a key punchline of the whole essay) {\em there is no single quantum ontology}\footnote{``Ontology'' is a word from the field of philosophy that refers to a theory of ``what is'' in the universe.  It is often contrasted with ``epistemology,'' describing a theory of how we know about things in the universe.}. A quantum ontology would be a scientifically supported way of answering questions like these:  What is actually going on with the electron flying through space?  Is the electron itself actually ``spread out,'' physically embodying many possibilities at the same time? Does $\Psi$ correspond to a real physical thing, or does it capture something only about what is knowable about a situation?  Could there be multiple versions of reality -- multiple universes, even -- in which the electron is in all of the different places that are expressed as possibilities in $\Psi$?  Is the randomness we observe -- the need for a probabilistic description -- something fundamental to the universe, or an expression of limited knowledge?  
 
 All of these are questions about the structure of physical reality on the quantum scale, and none of these questions can be answered unambiguously by the physical theory itself.  While quantum theory is wildly successful and well proven as a tool, it leaves open major questions about how the universe actually works. Although we will allude to a few specific interpretations in this essay, there are nearly as many interpretations of quantum mechanics as physicists working in the field.  
-A group of quantum physicists might include individuals who subscribe to a variety of different interpretations \cite{interpretations} such as, for example, the Copenhagen interpretation \cite{copenhagen}, QBism \cite{qbism}, the Information-Theoretical interpretation \cite{information,Bub}, the Relational interpretation\cite{Bitbol, Rovelli}, the Many Worlds and Everettian interpretations\cite{manyworlds}, Bohmian Mechanics (also called de Broglie-Bohm or Pilot Wave interpretation)\cite{bohm}, Consistent Histories\cite{histories}, the Time Symmetric interpretations \cite{retrocausal, aharonov,Wharton07}, or the Objective Collapse Models\cite{collapse}.  Or, none of the above.
+A group of quantum physicists might include individuals who subscribe to a variety of different interpretations \cite{interpretations} such as, for example, the Copenhagen interpretation \cite{copenhagen}, QBism \cite{qbism}, the Information-Theoretical interpretation  \cite{information,Bub}, the Relational interpretation \cite{Bitbol, Rovelli}, the Many Worlds and Everettian interpretations \cite{manyworlds}, Bohmian Mechanics (also called de Broglie-Bohm or Pilot Wave interpretation) \cite{bohm}, Consistent Histories \cite{histories}, the Time Symmetric interpretations \cite{retrocausal, aharonov,Wharton07}, or the Objective Collapse Models \cite{collapse}.  Or, none of the above.
 
 Most non-technical writing about quantum physics does not emphasize this point.  Authors typically pick an interpretation and explain quantum physics from within that framework. It is hard enough explaining the weirdness of quantum physics within a single interpretation, much less trying to explain that everything could be completely different if we picked another.  But if you are interested in asking about the meaning of quantum physics ``outside the lab,'' we think that it is important to acknowledge that there is no consensus on the meaning of quantum physics ``inside the lab.''  
 
@@ -166,7 +166,7 @@ Electrons and other particles that make up matter are themselves quanta.  Photon
 
 Let's define what we mean by {\em things} so that this statement gains some weight.  By {\em things} we mean {\em objects} or materials that operate by the familiar rules and logic of the macroscopic world.  Examples include coffee, cats, cars, carpets.  {\em Things} take up space.  If they move, they do so in a continuous way along a single trajectory in space.  While a thing may have a large physical extent, we never talk about it being in two completely different places at the same time.  Things also cannot jump instantly from one place to another.  They have physical properties, like their size, location, or speed of motion.  Those properties may change over time, but at any single moment, the properties have definite values that can be used to describe the thing in question.  Things continue to exist when we're not looking at them.  If they are created or destroyed, compounded or broken apart, there is a single narrative we can use to describe what happened.  
 
-None of the statements we made about things, above, can be applied in a straightforward way to describe how quanta work.  To get a taste for this, there is an experiment you can try at home. Take boxes and lay them out making a pentagon shape. Now take some red balls and some blue balls in your hand and place exactly one ball (of either color) in each box. Call a friend into the room and ask them to open any two adjacent boxes. Is it possible to arrange the balls (one in each box) such that your friend will always find one red ball and one blue ball, for any two adjacent boxes they decide to open?  If the balls were not \textit{things} but \textit{quanta}, then it would be possible to arrange such a scenario with different sequences of measurements.\cite{Liang}
+None of the statements we made about things, above, can be applied in a straightforward way to describe how quanta work.  To get a taste for this, there is an experiment you can try at home. Take boxes and lay them out making a pentagon shape. Now take some red balls and some blue balls in your hand and place exactly one ball (of either color) in each box. Call a friend into the room and ask them to open any two adjacent boxes. Is it possible to arrange the balls (one in each box) such that your friend will always find one red ball and one blue ball, for any two adjacent boxes they decide to open?  If the balls were not \textit{things} but \textit{quanta}, then it would be possible to arrange such a scenario with different sequences of measurements \cite{Liang}.
 
 Of course, it isn't simple to say ``instead of following macroscopic behavior, quanta work like this...''  because while the empirical facts are well established, the words we would use to describe them are tied to specific interpretations. Given a single scenario involving an electron in a laboratory, one physicist might be comfortable describing its behavior by saying ``the position of an electron is intrinsically undefined, all we know is that it behaves as if it were in many places simultaneously.''  Describing the same physical scenario, another might say ``an electron is a spread-out entity that does not have a single location.''  Or, ``the electron always has a single, definite location, but knowledge of that location is deeply impossible.''   Or even, ``many parallel universes exist, and in each of those, a copy of the same electron exists at a different place.'' These are a just a few of the many radically different (and quite radical) statements linked to different interpretations of the electron's non-thingness.  The equations describing all of these statements are the same in each case.  The observed behavior of the electron is the same in each case.  The electron's departure from everyday physics is the same in each case.  But the words, and the worldviews that accompany them, may be quite different. 
 
