--- a/1010.1810/HTT.tex
+++ b/1010.1810/HTT.tex
@@ -8,7 +8,28 @@
 % AMS-Latex %
 \documentclass[reqno,12pt]{amsart}
 \usepackage{latexsym,amsmath,amsthm,amssymb,amscd}
-\usepackage{hyperref}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
 
 \newcommand{\leftexp}[2]{{\vphantom{#2}}^{#1}{#2}}	
 \renewcommand{\to}{\rightarrow}
