--- a/0709.0248/hmit.tex
+++ b/0709.0248/hmit.tex
@@ -2,6 +2,28 @@
 \usepackage{amssymb,amsthm,amsmath,prooftree,graphics}
 \usepackage[all]{xy}
 \usepackage[latin1]{inputenc}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
 \input{diagxy}
 %%
 %% BASIC COMMANDS
