--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-02 08:02:24 -0400 
+%% Created for Pete Su at 2019-09-02 12:57:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Awodey2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {https://ui.adsabs.harvard.edu/abs/2010arXiv1010.1810A},
+	Archiveprefix = {arXiv},
+	Author = {{Awodey}, S.},
+	Date-Added = {2019-09-02 12:56:30 -0400},
+	Date-Modified = {2019-09-02 12:57:23 -0400},
+	Eprint = {1010.1810},
+	Journal = {arXiv e-prints},
+	Keywords = {Mathematics - Category Theory, Mathematics - Logic, 18G55},
+	Month = oct,
+	Note = {\href{https://arxiv.org/abs/1010.1810}{arxiv:1010.1810}},
+	Primaryclass = {math.CT},
+	Title = {{Type theory and homotopy}},
+	Year = 2010}
+
+@article{Awodey2009,
+	Author = {STEVE AWODEY and MICHAEL A. WARREN},
+	Date-Added = {2019-09-02 12:53:23 -0400},
+	Date-Modified = {2019-09-02 12:57:40 -0400},
+	Doi = {10.1017/s0305004108001783},
+	Journal = {Mathematical Proceedings of the Cambridge Philosophical Society},
+	Month = jan,
+	Note = {\href{https://arxiv.org/abs/0709.0248}{arxiv:0709.0248}},
+	Number = {1},
+	Pages = {45--55},
+	Publisher = {Cambridge University Press ({CUP})},
+	Title = {Homotopy theoretic models of identity types},
+	Url = {https://doi.org/10.1017/s0305004108001783},
+	Volume = {146},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1017/s0305004108001783}}
 
 @book{hottbook,
 	Address = {Institute for Advanced Study},
