--- a/0709.0248/hmit.tex
+++ b/0709.0248/hmit.tex
@@ -1,4 +1,4 @@
-\documentclass{amsart}
+\documentclass[12pt]{amsart}
 \usepackage{amssymb,amsthm,amsmath,prooftree,graphics}
 \usepackage[all]{xy}
 \usepackage[latin1]{inputenc}
