--- a/1703.03007/logicofspace.tex
+++ b/1703.03007/logicofspace.tex
@@ -1,5 +1,29 @@
 % we ask you to write your article in the basic Latex article class
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 
 % Each contributor is invited to write a chapter proposing a formal
 % introduction as well as a conceptual discussion of the corresponding
@@ -24,7 +48,6 @@
 % We have decided to allow the contributions to be a bit longer (around 30 pages instead of 25).
 
 \usepackage{xcolor}\definecolor{darkgreen}{rgb}{0,0.45,0}
-\usepackage[pagebackref,colorlinks,citecolor=darkgreen,linkcolor=darkgreen]{hyperref}
 \usepackage{amsmath,amssymb,url,cleveref,stmaryrd,mathrsfs,mathtools,braket,phonetic,paralist}
 \usepackage[all]{xy}
 \newcommand{\pullback}[1][dr]{\save*!/#1-1.7pc/#1:(-1,1)@^{|-}\restore}
@@ -124,6 +147,7 @@
 \newcommand{\shape}{\ensuremath{\mathord{\raisebox{0.5pt}{\text{\rm\esh}}}}}
 
 \title{Homotopy type theory: the logic of space}
+\date{8 Mar 2017}
 %\date{Draft of \today}
 \author{Michael Shulman\thanks{This material is based on research sponsored by The United States Air Force Research Laboratory under agreement number FA9550-15-1-0053.  The U.S.~Government is authorized to reproduce and distribute reprints for Governmental purposes notwithstanding any copyright notation thereon.  The views and conclusions contained herein are those of the author and should not be interpreted as necessarily representing the official policies or endorsements, either expressed or implied, of the United States Air Force Research Laboratory, the U.S.~Government, or Carnegie Mellon University.}}
 
