--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-02 12:57:40 -0400 
+%% Created for Pete Su at 2019-09-04 07:28:24 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{Escardo2004,
+	Author = {Mart{\'\i}n Escardo},
+	Booktitle = {Electron. Notes Theor. Comput. Sci},
+	Date-Added = {2019-09-04 07:27:41 -0400},
+	Date-Modified = {2019-09-04 07:28:24 -0400},
+	Note = {\href{http://www.cs.bham.ac.uk/~mhe/papers/syntop.pdf}{Download here}},
+	Publisher = {Elsevier},
+	Title = {Synthetic topology of data types and classical spaces},
+	Year = {2004}}
+
+@article{shulman2017,
+	Author = {Shulman, Michael},
+	Date-Added = {2019-09-04 07:22:38 -0400},
+	Date-Modified = {2019-09-04 07:23:30 -0400},
+	Journal = {arXiv preprint},
+	Note = {\href{https://arxiv.org/abs/1703.03007}{arXiv:1703.03007}},
+	Title = {Homotopy type theory: the logic of space},
+	Year = {2017}}
 
 @article{Awodey2010,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
