--- a/1711.01477/ium.tex
+++ b/1711.01477/ium.tex
@@ -1,4 +1,27 @@
 \documentclass[letter,12pt]{amsart}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
 % \documentclass{bull-l}
 \usepackage[numbers]{natbib}
 \newcommand{\mytitle}{An introduction to univalent foundations for mathematicians}
@@ -70,6 +93,7 @@
 
 \tableofcontents
 
+\newpage
 \section*{Introduction}
 
 The\blfootnote{MR Author ID: 76410} traditional foundation for mathematics, chosen more than a century ago, pins down basic issues, such as what
