--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,29 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-04 07:28:24 -0400 
+%% Created for Pete Su at 2019-09-04 07:35:40 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Grayson2018,
+	Author = {Daniel R. Grayson},
+	Date-Added = {2019-09-04 07:34:46 -0400},
+	Date-Modified = {2019-09-04 07:35:40 -0400},
+	Doi = {10.1090/bull/1616},
+	Journal = {Bulletin of the American Mathematical Society},
+	Month = mar,
+	Note = {\href{https://arxiv.org/abs/1711.01477v3}{arXiv:1711.01477v3}},
+	Number = {4},
+	Pages = {427--450},
+	Publisher = {American Mathematical Society ({AMS})},
+	Title = {An introduction to univalent foundations for mathematicians},
+	Url = {https://doi.org/10.1090/bull/1616},
+	Volume = {55},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1090/bull/1616}}
 
 @inproceedings{Escardo2004,
 	Author = {Mart{\'\i}n Escardo},
