--- a/1211.2851/simplicial-model.tex
+++ b/1211.2851/simplicial-model.tex
@@ -1,11 +1,27 @@
 \documentclass[11pt]{amsart}
 
-%% Geometry adjustment
-\setlength{\textwidth}{\paperwidth}
-\addtolength{\textwidth}{-2.5in}
-\setlength{\textheight}{\paperheight}
-\addtolength{\textheight}{-2in}
-\calclayout
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={7in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=5000
+\hbadness=2000
 
 %% Input handling:
 \usepackage[utf8]{inputenc}  % to allow unicode in source
@@ -23,7 +39,6 @@
 \definecolor{darkgreen}{rgb}{0,0.45,0}
 \definecolor{darkred}{rgb}{0.75,0,0}
 \definecolor{darkblue}{rgb}{0,0,0.6}
-\usepackage[colorlinks,citecolor=darkgreen,linkcolor=darkred,urlcolor=darkblue]{hyperref}
 \usepackage{breakurl}
 \usepackage{enumerate} % for customising enumerated lists
 
