--- a/1210.5658/general_tutorial.tex
+++ b/1210.5658/general_tutorial.tex
@@ -1,7 +1,27 @@
-\documentclass{amsart}
+\documentclass[11pt]{amsart}
 \usepackage{amssymb,bussproofs,pgf,float,listings,mdframed}
 \usepackage{color,graphicx}
-\usepackage[colorlinks]{hyperref}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=4000
+\hbadness=2000
 %%%0
 
 \usepackage{tikz}
