--- a/1210.5658/general_tutorial.tex
+++ b/1210.5658/general_tutorial.tex
@@ -425,7 +425,7 @@ Similarly, we think of a parameterized term
   \judge{x:B}{s(x):E(x)}
 \end{align*}
 as a continuous section of the fibration $E\to B$.
-\begin{figure}[H]
+\begin{figure}[htb]
   \begin{tikzpicture}[color=mydark, fill=mylight, line width=1pt]
     %% THE BASE SPACE  
     \filldraw (0,0) ellipse (1 and .5);
