--- a/1406.3219/naturalmodels.tex
+++ b/1406.3219/naturalmodels.tex
@@ -14,6 +14,29 @@
 \usepackage{url}
 %\usepackage{pdfpages}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 
 %\newcommand{\cors}[1]{\ensuremath{\ulcorner{#1}\urcorner}}
 \newcommand{\cors}[1]{\ensuremath{[#1]}}
@@ -99,7 +122,7 @@
 \title{Natural models of homotopy type theory\thanks{
 Penultimate version; published as \cite{awodeyNatural}}}
 \author{Steve Awodey}
-\date{\today}
+\date{8 Jan 2017}
 
 \maketitle
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
