--- a/1210.5658/general_tutorial.tex
+++ b/1210.5658/general_tutorial.tex
@@ -153,7 +153,7 @@ from NSF Grant DMS-0635607 during the preparation of this paper.}
 %    \subjclass is required.
 \subjclass[2010]{Primary 03-02. Secondary 03-B15, 68N18 and 55P99}
 
-\date{\today}
+\date{20 Oct 2012}
 
 \dedicatory{}
 
@@ -755,7 +755,7 @@ $(n-2)$-type.  E.g., types of h-level $2$ are the same as homotopy
 0-types: spaces which are homotopy equivalent to sets.  From a more
 category theoretic point of view we can view the h-levels as
 follows:
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tabular}{cl}
     \emph{h-level} & \emph{corresponding spaces up to weak equivalence}\\
