--- a/1210.5658/general_tutorial.tex
+++ b/1210.5658/general_tutorial.tex
@@ -811,7 +811,7 @@ In this setting we would still have all of the sets available to us,
 but they are ``carved out of'' or extracted from the
 universe as the types of h-level 2.
 
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tabular}{l|cc}
     & \emph{set theoretic} & \emph{univalent}\\
