--- a/1210.5658/paths.tex
+++ b/1210.5658/paths.tex
@@ -6,7 +6,7 @@ interpreted homotopy theoretically as the path space.  The path space,
 and the corresponding type in Coq, is so important that we will now
 carefully describe several basic constructions involving it in the
 setting of Coq.
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}[color=mydark, fill=mylight, line width=1pt]
     %% THE MAIN SPACE
@@ -179,7 +179,7 @@ that \verb|g| is now of type \verb|paths a c| (see Figure
 \verb|g| and we use \verb|assumption| to let the Coq system
 choose \verb|g| as the result of composing \verb|g| with the
 identity path.
-\begin{figure}[H]
+\begin{figure}[ht]
   \begin{tikzpicture}
     \node[smallcoqbox] (zero)  at (0,0) {%
       \begin{minipage}{4.25cm}
@@ -292,7 +292,7 @@ This is an example of a general mechanism in Coq for defining
 notations, but discussion of this mechanism is outside of the scope of
 this article (the crucial point here is that the value 30 tells how
 tightly the operation $`$ should bind).
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}
     \draw[fill=mylight] plot [smooth cycle,tension=.75] coordinates
@@ -343,7 +343,7 @@ Proof.
 Defined.
 \end{coqcode}
 \end{center}
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}[color=mydark, fill=mylight, line width=1pt,scale=.75]
     %% THE MAIN SPACE
@@ -506,7 +506,7 @@ Proof.
 Defined.
   \end{coqcode}
 \end{center}
-\begin{figure}[H]
+\begin{figure}[ht]
   \begin{tikzpicture}
     \node[smallcoqbox] (zero)  at (0,0) {%
       \begin{minipage}{5.2cm}
@@ -676,7 +676,7 @@ tactic here is \verb|simpl in *| which tells Coq to make any possible
 simplifications to the terms appearing in the goal or hypotheses.
 For example, in this case, Coq will simplify 
 \verb|(pr1 (pair x0 x1))| to \verb|x0|.
-\begin{figure}[H]
+\begin{figure}[ht]
   \centering
   \begin{tikzpicture}[color=mydark, fill=mylight, line width=1pt,scale=.75]
     %% THE MAIN SPACE
