--- a/1210.5658/we.tex
+++ b/1210.5658/we.tex
@@ -102,7 +102,7 @@ occurrence of \verb|idfun B b| in the goal by
 \verb|funcomp s r b|.  Here the backward arrow \verb|<-|
 indicates that we are rewriting the path \verb|p b| from right to
 left.
-\begin{figure}[H]
+\begin{figure}[ht]
   \begin{tikzpicture}
     \node[smallcoqbox] (zero)  at (0,0) {%
       \begin{minipage}{5.25cm}
