--- a/1210.5658/general_tutorial.tex
+++ b/1210.5658/general_tutorial.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{amsart}
+\documentclass{amsart}
 \usepackage{amssymb,bussproofs,pgf,float,listings,mdframed}
 \usepackage{color,graphicx}
 \usepackage[colorlinks=true
@@ -19,7 +19,7 @@ bookmarksopenlevel=10
 \usepackage[noBBpl]{mathpazo}
 \linespread{1.1}
 %\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\usepackage[papersize={6.25in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
 \tolerance=4000
 \hbadness=2000
 %%%0
