--- a/1811.02440v1/gtt.tex
+++ b/1811.02440v1/gtt.tex
@@ -1,4 +1,4 @@
-\documentclass[acmsmall,nonacm]{acmart}
+\documentclass[acmsmall,screen,12pt]{acmart}
 
 \newif\ifshort
 \newif\iflong
@@ -21,6 +21,7 @@
 \usepackage{environ}    % for long/short environments
 
 \usepackage{xcolor}
+
 
 % \usepackage{booktabs}   %% For formal tables:
 %                         %% http://ctan.org/pkg/booktabs
