--- a/1204.0526v2/vlt.tex
+++ b/1204.0526v2/vlt.tex
@@ -7,6 +7,30 @@
 \usepackage{longtable}
 \usepackage{amssymb}
 \usepackage{parskip}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+
 \begin{document}
 
 \DeclareGraphicsExtensions{.pdf, .jpg, .png}
