--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,31 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-05 18:40:44 -0400 
+%% Created for Pete Su at 2019-09-12 07:22:34 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Sebens:2018opu,
+	Archiveprefix = {arXiv},
+	Author = {Sebens, Charles T. and Carroll, Sean M.},
+	Date-Added = {2019-09-12 07:22:06 -0400},
+	Date-Modified = {2019-09-12 07:22:34 -0400},
+	Doi = {10.1093/bjps/axw004},
+	Eprint = {1405.7577},
+	Journal = {Brit. J. Phil. Sci.},
+	Note = {\href{https://arxiv.org/abs/1405.7577}{arXiv:1405.7577}},
+	Number = {1},
+	Pages = {25-74},
+	Primaryclass = {quant-ph},
+	Reportnumber = {CALT-68-2928, CALT 68-2928},
+	Slaccitation = {%%CITATION = ARXIV:1405.7577;%%},
+	Title = {{Self-locating Uncertainty and the Origin of Probability in Everettian Quantum Mechanics}},
+	Volume = {69},
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1093/bjps/axw004}}
 
 @article{AWODEY:2018aa,
 	Abstract = {The notion of a natural model of type theory is defined in terms of that of a representable natural transfomation of presheaves. It is shown that such models agree exactly with the concept of a category with families in the sense of Dybjer, which can be regarded as an algebraic formulation of type theory. We determine conditions for such models to satisfy the inference rules for dependent sums...], dependent products...]and intensional identity types , as used in homotopy type theory. It is then shown that a category admits such a model if it has a class of maps that behave like the abstract fibrations in axiomatic homotopy theory: They should be stable under pullback, closed under composition and relative products, and there should be weakly orthogonal factorizations into the class. It follows that many familiar settings for homotopy theory also admit natural models of the basic system of homotopy type theory.},
