--- a/1408.1944/location.tex
+++ b/1408.1944/location.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prl]{revtex4}
+\documentclass[aps,prl,12pt]{revtex4}
 \def\ee{\end{equation}}
 \def\bea{\begin{eqnarray}}
 \def\eea{\endF{eqnarray}}
@@ -16,6 +16,29 @@
 \def\S{{\cal{S}}}
 \def\half{{1\over 2}}
 \def\Prob{{\rm Prob}}
+
+\usepackage{mathpazo}
+\linespread{1.05}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,pagecolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+\sloppy
+
 \begin{document}
 
 \title{Does it Make Sense to Speak of
