--- a/1311.0249/reality.tex
+++ b/1311.0249/reality.tex
@@ -1,4 +1,4 @@
-\documentclass[aps,prl]{revtex4}
+\documentclass[12pt,aps,prl]{revtex4}
 \def\ee{\end{equation}}
 \def\bea{\begin{eqnarray}}
 \def\eea{\endF{eqnarray}}
@@ -16,6 +16,31 @@
 \def\S{{\cal{S}}}
 \def\half{{1\over 2}}
 \def\Prob{{\rm Prob}}
+\usepackage{amsmath}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 \begin{document}
 
 \title{A Solution to the Lorentzian Quantum Reality Problem}
@@ -365,30 +390,33 @@ Then we have
  \frac{ A^j (M_k , x, t, T)}{B^j (t,T)} \, , 
 \end{equation}
 where 
-\begin{eqnarray}
-A^j (M_k, x, t, T) &=&
+\begin{align*}
+A^j (M_k, x, t, T) &=
 \sum_{\{ k_1 , \ldots , k_{r} : k_i \in C^{(j)} \, \forall i {\rm~and~}
 \sum_{i=1}^{r} M_{k_i} + M_k =
  M^{(j)} \} } 
-\int dy_1 \ldots dy_{r} \\
-&& \qquad  \Tr ( P_f \exp ( - i H (T-t) /
-\hbar ) P_{M_k}^x \prod_{i=1}^{N-1} P_{M_{k_i}}^{y_i}
+\int dy_1 \ldots dy_{r}\\
+  &\qquad\Tr ( P_f \exp ( - i H (T-t) /
+\hbar ) P_{M_k}^x \\
+& \qquad \prod_{i=1}^{N-1} P_{M_{k_i}}^{y_i}
  \exp ( - i H t / \hbar ) P_0 \exp (  i H t /
-\hbar ) P_{M_k}^x \prod_{i=1}^{N-1} P_{M_{k_i}}^{y_i} \exp (  i H (T-t) / \hbar )  )
+\hbar ) P_{M_k}^x \\
+&\qquad \prod_{i=1}^{N-1} P_{M_{k_i}}^{y_i} \exp (  i H (T-t) / \hbar )  )
 \, , \nonumber 
-\end{eqnarray}
+\end{align*}
 and
-\begin{eqnarray}
-B^j (t,T) &=& \sum_{\{ k_1 , \ldots , k_{r+1} : k_i \in C^{(j)} \forall i
+\begin{align*}
+B^j (t,T) &= \sum_{\{ k_1 , \ldots , k_{r+1} : k_i \in C^{(j)} \forall i
   {\rm~and~}
 \sum_{i=1}^{r+1} M_{k_i} =
- M^{(j)} \} } 
-\int dy_1 \ldots dy_{r+1}  \\
-&& \qquad \Tr ( P_f \exp ( - i H (T-t) /
+ M^{(j)} \} }
+\int dy_1 \ldots dy_{r+1} \\
+& \qquad \Tr ( P_f \exp ( - i H (T-t) /
 \hbar )  \prod_{i=1}^{r+1}  P_{M_i}^{y_i}  \exp ( - i H t / \hbar ) P_0 
-\exp (  i H t / \hbar ) \prod_{i=1}^{r+1}  P_{M_i}^{y_i}  \exp (  i H (T-t) /
-\hbar ) ) \, . \nonumber 
-\end{eqnarray}
+\exp (  i H t / \hbar ) \\
+& \qquad \prod_{i=1}^{r+1}  P_{M_i}^{y_i}  \exp (  i H (T-t) /
+\hbar ) ) \, .  
+\end{align*}
 Here $P_0 = \ket{\psi (0 ) }\bra{ \psi(0)}$ and 
 $P_{f}$ is the projection onto the space of states for which
 the class $\bar{j}$ particles have final 
