--- a/1311.0249/reality.tex
+++ b/1311.0249/reality.tex
@@ -1,4 +1,5 @@
-\documentclass[12pt,aps,prl]{revtex4}
+\documentclass[12pt,aps]{revtex4}
+\usepackage{amsmath}
 \def\ee{\end{equation}}
 \def\bea{\begin{eqnarray}}
 \def\eea{\endF{eqnarray}}
@@ -16,7 +17,6 @@
 \def\S{{\cal{S}}}
 \def\half{{1\over 2}}
 \def\Prob{{\rm Prob}}
-\usepackage{amsmath}
 
 \usepackage[colorlinks=true
 ,urlcolor=blue
