--- a/0903.0340/rosetta.arxiv.3.tex
+++ b/0903.0340/rosetta.arxiv.3.tex
@@ -4,20 +4,42 @@
 %June 6, 2009
 %contains all corrections present in the version to be published
 
-\documentclass{article}
+\documentclass[12pt]{article}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 \addtolength{\oddsidemargin}{-50pt}
 \addtolength{\evensidemargin}{-50pt}
 \addtolength{\textwidth}{100pt}
 %\sloppy
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\usepackage{newpxmath}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
+\usepackage{amssymb}
+\usepackage{latexsym,url}
+
 \usepackage{bussproofs}
 \usepackage{epsfig}
-\usepackage[all, knot]{xy}
-\usepackage{hyperref}
-\usepackage{latexsym,url}
-\usepackage{amssymb}
-\usepackage{txfonts}
 \usepackage{undertilde}
 \usepackage{pb-diagram}
 \usepackage{pstricks}
@@ -25,7 +47,9 @@
 \usepackage{pst-grad}
 \usepackage{pst-plot}
 \usepackage[tiling]{pst-fill}
-\usepackage{pstcol}
+\usepackage[all, knot]{xy}
+
+%\usepackage{pstcol}
 % PsTricks defaults
 \psset{linewidth=0.3pt,dimen=middle}
 \psset{xunit=.70cm,yunit=0.70cm}
@@ -64,8 +88,8 @@
 \newcommand{\iso}{\cong}
 \newcommand{\isoto}{\xrightarrow{\sim}}
 \newcommand{\To}{\Rightarrow}
-\newcommand{\xrightarrow}[1]{\stackrel{#1}{\rightarrow}}
-\newcommand{\implies}{\quad \Rightarrow \quad}
+%\newcommand{\xrightarrow}[1]{\stackrel{#1}{\rightarrow}}
+%\newcommand{\implies}{\quad \Rightarrow \quad}
 
 %homs
 \newcommand{\lHom}{\vdash}
@@ -132,7 +156,7 @@
 \newcommand {\tuple}[1]{\langle #1 \rangle}
 \newcommand{\di}[1]{\[\begin{diagram}#1\end{diagram}\]}
 \newcommand{\xeq}[1]{{\displaystyle \mathop{=}_{#1}}}
-\newcommand{\text}{\mbox}
+%\newcommand{\text}{\mbox}
 \newcommand{\QUOTE}[1]{\begin{quote} {\tt #1 } \end{quote}}
 
 %pictures of cobordisms
@@ -394,7 +418,7 @@ that is, an $n$-dimensional manifold going between manifolds of one
 dimension less:
 
 \[
-\begin{pspicture}[0.5](2,5)
+\begin{pspicture}[shift=0.5](2,5)
   \rput(1,0.5){\comultc}
   \rput(1,2.5){\multc}
 \end{pspicture}
@@ -770,7 +794,7 @@ $f \maps X \to Y$ is an $n$-dimensional manifold whose boundary is
 the disjoint union of the $(n-1)$-dimensional manifolds $X$ and $Y$.  
 Here are a couple of cobordisms in the case $n = 2$:
 \[
-\begin{pspicture}[0.5](4,4)
+\begin{pspicture}[shift=0.5](4,4)
   \rput(3,1){\birthc}
   \rput(1,1){\medidentc}
 \end{pspicture}
@@ -779,7 +803,7 @@ Here are a couple of cobordisms in the case $n = 2$:
  {\ar_f (0,10)*+{X}; (0,-11)*+{Y}};
   \endxy
 \qquad \qquad
- \begin{pspicture}[.5](4,2.5)
+ \begin{pspicture}[shift=0.5](4,2.5)
   \rput(2,0){\multc}
 \end{pspicture}
 \qquad
@@ -790,7 +814,7 @@ Here are a couple of cobordisms in the case $n = 2$:
 We compose them by gluing the `output' of one to the `input' of
 the other.   So, in the above example $gf \maps X \to Z$ looks like this:
 \[
-\begin{pspicture}[0.5](4,4)
+\begin{pspicture}[shift=0.5](4,4)
   \rput(2,0){\multc}
   \rput(1,2.49){\smallidentc}
   \rput(3,2.49){\birthc}
@@ -1295,7 +1319,7 @@ category, we always use the usual tensor product!}
 by disjoint union.  For example, the tensor product of these two
 morphisms:
 \[
-\begin{pspicture}[0.5](4,4)
+\begin{pspicture}[shift=0.5](4,4)
   \rput(3,0.5){\birthc}
   \rput(1,0.5){\medidentc}
 \end{pspicture}
@@ -1304,7 +1328,7 @@ morphisms:
  {\ar_f (0,10)*+{X}; (0,-11)*+{Y}};
  \endxy
 \qquad \qquad
-\begin{pspicture}[.5](4,2.5)
+\begin{pspicture}[shift=.5](4,2.5)
   \rput(2,0){\comultc}
 \end{pspicture}
 \qquad
@@ -1314,7 +1338,7 @@ morphisms:
 \]
 is this:
 \[
-\begin{pspicture}[.5](7,2.5)
+\begin{pspicture}[shift=.5](7,2.5)
   \rput(3,0){\birthc}
   \rput(1,0){\identc}
   \rput(6,0){\comultc}
@@ -1845,7 +1869,7 @@ $b_{X,Y}$ is diffeomorphic to the disjoint union of cylinders $X
 \times [0,1]$ and $Y \times [0,1]$.  For $2\Cob$ this braiding looks 
 as follows when $X$ and $Y$ are circles:
 \[
-\begin{pspicture}[0.5](4,2.5)
+\begin{pspicture}[shift=0.5](4,2.5)
   \rput(2,0){\ucrossc}
 \end{pspicture}
 \qquad
@@ -2269,7 +2293,7 @@ This is particularly vivid in examples like $\Tang_k$ and $n\Cob$.
 For example, in $2\Cob$, taking $X$ to be the circle, the unit
 looks like this:
 \[
-\begin{pspicture}[0.5](2,2)
+\begin{pspicture}[shift=0.5](2,2)
   \rput(1,0){\zagc}
 \end{pspicture}
 \qquad
@@ -2279,7 +2303,7 @@ looks like this:
 \]
 while the counit looks like this:
 \[
-\begin{pspicture}[0.5](2,2)
+\begin{pspicture}[shift=0.5](2,2)
   \rput(1,0){\zigc}
 \end{pspicture}
 \qquad
@@ -2725,7 +2749,7 @@ by switching the input and output of $f \maps X \to Y$,
 and then switching the orientation of each connected component
 of $f$.  Again, a picture speaks a thousand words:
 \[
-\begin{pspicture}[.5](4,2.5)
+\begin{pspicture}[shift=.5](4,2.5)
   \rput(2,0){\comultc}
 \end{pspicture}
 \quad
@@ -2733,7 +2757,7 @@ of $f$.  Again, a picture speaks a thousand words:
  {\ar_{f} (0,10)*+{X}; (0,-11)*+{Y}};
  \endxy
 \qquad
-\begin{pspicture}[.5](4,2.5)
+\begin{pspicture}[shift=.5](4,2.5)
   \rput(2,0){\multc}
 \end{pspicture}
 \quad
