--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-09-12 07:44:33 -0400 
+%% Created for Pete Su at 2019-09-14 11:12:30 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{Baez2011,
+	Abstract = {In physics, Feynman diagrams are used to reason about quantum processes. In the 1980s, it became clear that underlying these diagrams is a powerful analogy between quantum physics and topology. Namely, a linear operator behaves very much like a ``cobordism'': a manifold representing spacetime, going between two manifolds representing space. This led to a burst of work on topological quantum field theory and ``quantum topology''. But this was just the beginning: similar diagrams can be used to reason about logic, where they represent proofs, and computation, where they represent programs. With the rise of interest in quantum cryptography and quantum computation, it became clear that there is extensive network of analogies between physics, topology, logic and computation. In this expository paper, we make some of these analogies precise using the concept of ``closed symmetric monoidal category''. We assume no prior knowledge of category theory, proof theory or computer science.},
+	Address = {Berlin, Heidelberg},
+	Author = {Baez, J. and Stay, M.},
+	Booktitle = {New Structures for Physics},
+	Date-Added = {2019-09-14 11:10:48 -0400},
+	Date-Modified = {2019-09-14 11:12:19 -0400},
+	Doi = {10.1007/978-3-642-12821-9_2},
+	Editor = {Coecke, Bob},
+	Isbn = {978-3-642-12821-9},
+	Note = {\href{https://arxiv.org/abs/0903.0340}{arXiv:0903.0340}},
+	Pages = {95--172},
+	Publisher = {Springer Berlin Heidelberg},
+	Title = {Physics, Topology, Logic and Computation: A Rosetta Stone},
+	Url = {https://doi.org/10.1007/978-3-642-12821-9_2},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-642-12821-9_2}}
 
 @article{Kent:2014yga,
 	Archiveprefix = {arXiv},
