--- a/quant-ph-0404040/quantum.tex
+++ b/quant-ph-0404040/quantum.tex
@@ -5,7 +5,7 @@
 
 \hfuzz=6pt
 
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{amsfonts,amssymb}
 \usepackage[all, knot]{xy}
 \xyoption{arc}
@@ -26,15 +26,30 @@
 \newcommand{\tensor}{\otimes}
 \newcommand{\iso}{\cong}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.05}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
 
-	\textwidth 6in
-	\textheight 8.5in	\evensidemargin .25in
-	\oddsidemargin .25in
-	\topmargin .25in
-	\headsep 0in
-	\headheight 0in
-	\footskip .5in
-%If you want single spaced copy, delete the next two lines.
+	%If you want single spaced copy, delete the next two lines.
 %	\parskip 1.75\parskip plus 3pt minus 1pt
 %	\renewcommand{\baselinestretch}{1.5}
 	\pagestyle{plain}
