--- a/1203.1539/eff.tex
+++ b/1203.1539/eff.tex
@@ -1,6 +1,28 @@
-\documentclass[10pt]{article}
+\documentclass[12pt]{article}
 
-\usepackage{times}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+%\usepackage[letterpaper, margin=1.2in]{geometry}
+\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\usepackage[small]{titlesec}
+
 \usepackage{amsmath, amssymb}
 \usepackage{xspace}
 \usepackage{mathpartir}
@@ -24,10 +46,10 @@ basicstyle=\ttfamily\small,
 }}{}
 \let\inline\lstinline
 
-\usepackage[
+\hypersetup{
   pdfauthor={Andrej Bauer and Matija Pretnar},
   pdftitle={Programming with Algebraic Effects and Handlers}
-]{hyperref}
+}
 
 \begin{document}
 
